--- a/src/blocks/Logo.css
+++ b/src/blocks/Logo.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   display: flex;
+  align-items: center;
 }
 
 .logo__image {
@@ -9,9 +10,13 @@
   width: 50px;
 }
 
+.logo__image:hover {
+  cursor: pointer;
+  opacity: 0.5;
+}
+
 .logo__title {
   font-family: "Sacramento", Arial, sans-serif;
-  align-self: center;
   color: #d94e28;
   padding-top: 10px;
 }
