--- a/src/blocks/Header.css
+++ b/src/blocks/Header.css
@@ -2,6 +2,6 @@
   background-color: #fff;
   box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.1);
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 5px 5px;
 }
