--- a/src/blocks/Main.css
+++ b/src/blocks/Main.css
@@ -25,7 +25,8 @@
 }
 
 .main__video {
-  max-width: 500px;
+  width: 100%;
+  max-height: 550px;
   border-radius: 20px;
   -webkit-box-shadow: -14px 15px 41px -19px rgba(0, 0, 0, 0.67);
   -moz-box-shadow: -14px 15px 41px -19px rgba(0, 0, 0, 0.67);
@@ -45,10 +46,6 @@
 @media (max-width: 870px) {
   .main__header {
     flex-direction: column;
-  }
-
-  .main__video {
-    width: 100%;
-    height: auto;
+    padding: 50px 20px;
   }
 }
