--- a/src/blocks/NavBar.css
+++ b/src/blocks/NavBar.css
@@ -15,6 +15,7 @@
   font-size: 16px;
   text-align: center;
   transition: background-color 0.3s linear;
+  align-self: center;
 }
 
 .nav__link_active {
@@ -26,4 +27,11 @@
   background-color: rgba(217, 78, 40, 1);
   color: #fff;
   cursor: pointer;
+}
+
+@media (max-width: 400px) {
+  .nav {
+    gap: 5px;
+    padding-right: 10px;
+  }
 }
