--- a/src/blocks/AboutUs.css
+++ b/src/blocks/AboutUs.css
@@ -8,6 +8,16 @@
   position: relative;
 }
 
+.about-us__cards {
+  display: flex;
+  list-style-type: none;
+  border-radius: 10px;
+  overflow: hidden;
+  align-content: space-between;
+  justify-content: space-between;
+  position: relative;
+}
+
 .about-us__image {
   height: 282px;
   width: 282px;
@@ -17,7 +27,7 @@
   padding-top: 25px;
   padding-bottom: 25px;
   align-items: center;
-  background: white;
+  background: #dc6b19;
   padding-left: 20px;
   padding-right: 20px;
   justify-content: space-between;
@@ -35,6 +45,17 @@
   line-height: 29.05px;
 }
 
+.about-us__info {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 29.05px;
+}
+
 .github__logo {
   background: transparent url(../assets/github-logo.svg) center no-repeat;
   width: 21px;
@@ -43,10 +64,20 @@
   font-size: 14px;
 }
 
+.github__logo:hover {
+  opacity: 50%;
+  cursor: pointer;
+}
+
 .linkedIn__logo {
   background: transparent url(../assets/linkedIn-logo.svg) center no-repeat;
   width: 21px;
   height: 18px;
   border: none;
   font-size: 14px;
+}
+
+.linkedIn__logo:hover {
+  opacity: 50%;
+  cursor: pointer;
 }
