--- a/src/blocks/AboutUs.css
+++ b/src/blocks/AboutUs.css
@@ -1,3 +1,7 @@
+.about-us-text {
+  margin-bottom: 90px;
+}
+
 .about-us__card {
   display: flex;
   flex-direction: column;
@@ -32,6 +36,14 @@
   padding-right: 20px;
   justify-content: space-between;
   color: black;
+  background-image: linear-gradient(
+    to right top,
+    #d94e28,
+    #c53237,
+    #ab1a41,
+    #8d0746,
+    #6c0345
+  );
 }
 
 .about-us__title {
@@ -58,6 +70,7 @@
 
 .github__logo {
   background: transparent url(../assets/github-logo.svg) center no-repeat;
+  background-size: contain;
   width: 21px;
   height: 18px;
   border: none;
@@ -71,6 +84,7 @@
 
 .linkedIn__logo {
   background: transparent url(../assets/linkedIn-logo.svg) center no-repeat;
+  background-size: contain;
   width: 21px;
   height: 18px;
   border: none;
