--- a/src/blocks/AboutUs.css
+++ b/src/blocks/AboutUs.css
@@ -18,8 +18,7 @@
   list-style-type: none;
   border-radius: 10px;
   overflow: hidden;
-  align-content: space-between;
-  justify-content: space-between;
+  justify-content: space-evenly;
   position: relative;
 }
 
