--- a/src/blocks/Form.css
+++ b/src/blocks/Form.css
@@ -4,6 +4,15 @@
   align-items: center;
   flex-direction: column;
   gap: 40px;
+  background: linear-gradient(
+    180deg,
+    rgb(255 110 71) 0%,
+    rgba(255, 255, 255, 1) 80%
+  );
+  border-radius: 30px;
+  min-height: 300px;
+  padding: 80px 40px;
+  max-width: 500px;
 }
 
 .form__label {
@@ -38,4 +47,5 @@
   border: none;
   border-radius: 10px;
   font-size: 20px;
+  cursor: pointer;
 }
