--- a/src/blocks/App.css
+++ b/src/blocks/App.css
@@ -1,5 +1,9 @@
 #root {
-  width: 100vw;
-  margin: 0 auto;
   text-align: center;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
