--- a/src/blocks/Logo.css
+++ b/src/blocks/Logo.css
@@ -1,4 +1,5 @@
 .logo {
+  background: transparent;
   margin: 0;
   padding: 0;
   display: flex;
@@ -6,13 +7,16 @@
 }
 
 .logo__image {
+  background: #6c0345;
   height: 50px;
   width: 50px;
+  transition: transform 0.2s ease-in-out;
 }
 
 .logo__image:hover {
   cursor: pointer;
   opacity: 0.5;
+  transform: scale(1.1);
 }
 
 .logo__title {
