--- a/src/blocks/MenuSection.css
+++ b/src/blocks/MenuSection.css
@@ -28,8 +28,7 @@
   outline: none;
   border-bottom: 1px solid black;
 }
-.menu-section__button {
-}
+
 .menu-section__button_action_add {
   background-color: orange;
   color: white;
@@ -49,8 +48,7 @@
 .menu-section__added-title {
   margin-right: auto;
 }
-.menu-section__no-menu {
-}
+
 .menu-section__menu-list {
   display: flex;
   flex-direction: column;
@@ -82,14 +80,11 @@
   gap: 30px;
 }
 .menu-section__chef-name {
-.menu-section__chef-name {
-  padding: 20px;
+  padding: 0;
   margin: 0;
 }
 .menu-section__submit {
   margin-left: auto;
-}
-.menu-section_button_action_clear {
 }
 
 .menu-section__delete-btn {
