--- a/src/blocks/Main.css
+++ b/src/blocks/Main.css
@@ -1,7 +1,11 @@
+.page {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 .main {
   margin: 0 auto;
   scrollbar-gutter: stable both-edges;
-  max-width: 1280px;
 }
 
 .main__header {
@@ -43,15 +47,18 @@
   background: linear-gradient(
     180deg,
     rgb(255 110 71) 0%,
-    rgba(255, 255, 255, 1) 80%
+    rgba(255, 255, 255, 1) 50%
   );
   border-radius: 30px;
   min-height: 300px;
-  padding: 100px 40px;
+  padding: 20px 40px;
+  margin-bottom: 200px;
 }
 
 .Main-planner-text {
-  margin-bottom: 50px;
+  margin-bottom: 100px;
+  font-family: "Sacramento", Arial, sans-serif;
+  font-size: 50px;
 }
 
 .Main__planner-flex {
@@ -66,13 +73,38 @@
 }
 
 .main__ideas {
-  padding: 100px 40px;
+  background: linear-gradient(
+    360deg,
+    rgb(255 110 71) 0%,
+    rgba(255, 255, 255, 1) 50%
+  );
+  border-radius: 30px;
+  min-height: 300px;
+  padding: 20px 40px;
+  margin-bottom: 200px;
+}
+
+.main__ideas-text {
+  margin-bottom: 100px;
+  font-family: "Sacramento", Arial, sans-serif;
+  font-size: 50px;
 }
 
 .main__ideas-flex {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  list-style: none;
+  gap: 50px;
+}
+
+/* .main__ideas-item {
+  width: 100px;
+  height: 100px;
+} */
+
+.ideas-images {
+  max-width: 100%;
 }
 
 @media (max-width: 870px) {
