--- a/src/blocks/AboutUs.css
+++ b/src/blocks/AboutUs.css
@@ -1,5 +1,13 @@
-.about-us-text {
+.about-us-intro__title {
+  font-family: "Sacramento", Arial, sans-serif;
+  color: #d94e27;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.about-us-intro {
   margin-bottom: 90px;
+  font-weight: bold;
 }
 
 .about-us__card {
