--- a/src/blocks/AboutUs.css
+++ b/src/blocks/AboutUs.css
@@ -1,3 +1,12 @@
+.about-us-intro__title {
+  font-family: "Sacramento", Arial, sans-serif;
+  color: #d94e27;
+  font-size: 50px;
+}
+.about-us-intro {
+  margin-bottom: 90px;
+}
+
 .about-us__card {
   display: flex;
   flex-direction: column;
@@ -27,11 +36,18 @@
   padding-top: 25px;
   padding-bottom: 25px;
   align-items: center;
-  background: #dc6b19;
   padding-left: 20px;
   padding-right: 20px;
   justify-content: space-between;
   color: black;
+  background-image: linear-gradient(
+    to right top,
+    #d94e28,
+    #c53237,
+    #ab1a41,
+    #8d0746,
+    #6c0345
+  );
 }
 
 .about-us__title {
