--- a/src/blocks/Form.css
+++ b/src/blocks/Form.css
@@ -25,16 +25,16 @@
 }
 
 .form__input {
-  border-color: #d94e38;
   border-radius: 10px;
   color: black;
   min-width: 200px;
   text-align: center;
+  border: none;
 }
 
 .form__input:focus {
-  outline-color: #d94e28;
   outline-style: outset;
+  border: 1px solid #d94e28;
 }
 
 .form__button {
@@ -44,6 +44,7 @@
   background-color: #d94e28;
   border-radius: 10px;
   min-width: 230px;
+  height: 50px;
   border: none;
   border-radius: 10px;
   font-size: 20px;
