--- a/src/blocks/Header.css
+++ b/src/blocks/Header.css
@@ -5,3 +5,10 @@
   justify-content: center;
   padding: 5px 5px;
 }
+
+@media (max-width: 560px) {
+  .header {
+    flex-direction: column;
+    align-items: center;
+  }
+}
