--- a/src/blocks/NavBar.css
+++ b/src/blocks/NavBar.css
@@ -29,9 +29,10 @@
   cursor: pointer;
 }
 
-@media (max-width: 530px) {
+@media (max-width: 560px) {
   .nav {
-    gap: 5px;
-    padding-right: 10px;
+    gap: 10px;
+    padding: 0;
+    flex-direction: column;
   }
 }
