--- a/src/blocks/Header.css
+++ b/src/blocks/Header.css
@@ -6,7 +6,7 @@
   padding: 5px 5px;
 }
 
-@media (max-width: 560px) {
+@media screen and (max-width: 560px) {
   .header {
     flex-direction: column;
     align-items: center;
