--- a/src/blocks/MenuSection.css
+++ b/src/blocks/MenuSection.css
@@ -34,7 +34,7 @@
 }
 .menu-section__input {
   height: 50px;
-  border: none;
+  border: 1px transparent;
   box-sizing: border-box;
   background-color: #fff;
   color: inherit;
@@ -44,7 +44,7 @@
 }
 
 .menu-section__input:focus {
-  outline-style: outset;
+  outline-style: inset;
   border: 1px solid #d94e28;
 }
 
@@ -178,9 +178,10 @@
   box-shadow: rgb(143, 132, 132, 0.5) 5px 5px 5px;
 }
 
-@media (max-width: 560px) {
+@media screen and (max-width: 560px) {
   .menu-section {
     width: 80vw;
+    padding: 10px;
   }
   .menu-section__inputs {
     flex-direction: column;
