--- a/src/blocks/MyEvent.css
+++ b/src/blocks/MyEvent.css
@@ -19,7 +19,7 @@
   margin: 0;
 }
 
-@media (max-width: 530px) {
+@media screen and (max-width: 530px) {
   .my-event {
     display: flex;
     flex-direction: column;
