--- a/src/blocks/NavBar.css
+++ b/src/blocks/NavBar.css
@@ -29,7 +29,7 @@
   cursor: pointer;
 }
 
-@media (max-width: 560px) {
+@media screen and (max-width: 560px) {
   .nav {
     gap: 10px;
     padding: 0;
