--- a/src/blocks/Form.css
+++ b/src/blocks/Form.css
@@ -7,7 +7,7 @@
   background: linear-gradient(
     180deg,
     rgb(255 110 71) 0%,
-    rgba(255, 255, 255, 1) 80%
+    rgba(255, 255, 255, 1) 95%
   );
   border-radius: 30px;
   min-height: 300px;
@@ -22,6 +22,7 @@
 
 .form__text {
   margin: 0 0 5px;
+  color: #6c0345;
 }
 
 .form__input {
