--- a/src/blocks/NavBar.css
+++ b/src/blocks/NavBar.css
@@ -1,4 +1,12 @@
 .nav {
+  background-color: #fff;
+  box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  padding: 5px 5px;
+}
+
+.nav__links {
   padding: 20px 120px 5px 0;
   display: flex;
   justify-content: center;
@@ -31,6 +39,11 @@
 
 @media screen and (max-width: 560px) {
   .nav {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .nav__links {
     gap: 10px;
     padding: 0;
     flex-direction: column;
