--- a/src/blocks/App.css
+++ b/src/blocks/App.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  padding: 30px;
+  /* padding: 30px; */
 }
 
 @media screen and (max-width: 560px) {
