--- a/src/blocks/MyEvent.css
+++ b/src/blocks/MyEvent.css
@@ -7,7 +7,7 @@
 .my-event__title {
   font-family: "Sacramento", Arial, sans-serif;
   color: #d94e28;
-  margin: 0 auto;
+  margin: 10px auto 0;
   font-size: 50px;
   padding-bottom: 10px;
 }
