--- a/src/blocks/Main.css
+++ b/src/blocks/Main.css
@@ -32,6 +32,7 @@
 .main__subtitle {
   font-family: "Sacramento", Arial, sans-serif;
   font-size: 30px;
+  color: #6c0345;
 }
 
 .main__video {
@@ -59,6 +60,7 @@
   margin-bottom: 100px;
   font-family: "Sacramento", Arial, sans-serif;
   font-size: 60px;
+  color: #6c0345;
 }
 
 .main__planner-flex {
@@ -93,10 +95,12 @@
 .main__icon-text {
   font-size: 40px;
   font-family: "Sacramento", Arial, sans-serif;
+  color: #6c0345;
 }
 
 .main__icon-summary {
   font-size: 20px;
+  color: #6c0345;
 }
 
 .main__ideas {
