--- a/src/blocks/Main.css
+++ b/src/blocks/Main.css
@@ -112,7 +112,6 @@
   border-radius: 30px;
   min-height: 300px;
   padding: 20px 40px;
-  margin-bottom: 200px;
   margin: 0 30px 200px;
 }
 
@@ -191,9 +190,13 @@
 
 @media screen and (max-width: 560px) {
   .main__planner {
+    margin: 0;
     padding: 10px 5px;
   }
   .main__header {
     padding: 30px 0;
+  }
+  .main__ideas {
+    margin: 0;
   }
 }
